fixed broken responsiveness on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,8 @@ header {
   flex-wrap: wrap;
 }
 
-header form {
-  margin: 0 10px 0;
-}
-
 header h3 {
-  margin: 0;
+  margin: 0 10px 0 0;
 }
 
 input {
@@ -53,6 +49,7 @@ button {
   position: relative;
   height: 2em;
   width: 2em;
+  margin-left: 10px;
 }
 
 .info-container img {
@@ -109,20 +106,31 @@ button {
     width: 100%;
   }
 
-  header h3 {
-    width: 100%;
-  }
-
-  header form {
-    margin-left: 0;
-  }
-
-  header {
-    margin-bottom: 10px;
-  }
-
   .info-container span {
     left: unset;
     right: 20%;
   }
+}
+
+@media screen and (max-width: 400px) {
+  header {
+    justify-content: space-between;
+  }
+  
+  header h3 {
+    order: 1;
+  }
+
+  header form {
+    order: 3;
+  }
+
+  .info-container {
+    order: 2;
+  }
+
+  input[type="text"] {
+    width: 50%;
+  }
+
 }
